style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
    position: relative;
}
.container {
  /* border: 1px solid red; */
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 3rem;
  background: #0f2027; /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
  background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
  color: white;
}
.heading {
  font-size: 1.5rem;
}
.form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
}
.form-container h4 {
  font-size: 1.8rem;
  padding: 0.8rem;
  font-family: sans-serif;
}
.form-container form {
  display: flex;
  flex-direction: column;
  /* border: 1px solid red; */
  width: 60%;
  padding: 1rem;
}
.form-container form label {
  font-size: 2rem;
  padding: 0.5rem 0;
}
.form-container form input {
  width: 100%;
  padding: 8px;
  font-size: 1.2rem;
  border-radius: 5px;
}
#submit-btn {
  font-size: 1.5rem;
  margin: 1rem 0;
  padding: 0.8rem;
  border-radius: 1rem;
  background-color: #ff3cac;
  background-image: linear-gradient(
    225deg,
    #ff3cac 0%,
    #784ba0 50%,
    #2b86c5 100%
  );
  font-weight: bold;
  border: none;
  color: #fff;
}
#msg {
  font-weight: bold;
  width: 40%;
  font-size: 1.4rem;
  text-align: center;
  border-radius: 1rem;
  padding: 1rem;
  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
}
footer {
  padding: 0.4rem 0;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  text-align: center;
  height: 4rem;
  /* background-color: #003865; */
  background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
}
footer p {
  font-size: 1.2rem;
  font-family: "Courier New", Courier, monospace;
  font-weight: bold;
}
.links a {
    text-decoration: none;
    color: #fff;
  }
  .links i {
    font-size: 2rem;
    padding: 0 0.8rem;
  }
@media screen and (max-width: 768px) {
  .heading {
    font-size: 1.2rem;
  }
  .form-container {
    width: 100%;
  }
}

@media screen and (max-width: 425px) {
  .container {
    padding: 1rem;
  }
  .heading {
    font-size: 1rem;
    /* border: 1px solid red; */
    text-align: center;
  }
  .form-container {
    width: 100%;
  }
  .form-container form {
    width: 100%;
  }
  .form-container form label {
    font-size: 1.8rem;
  }
  #msg {
    width: 100%;
  }
}

